--- a/ruoyi-admin/src/main/resources/templates/yk/top_landlord/top_landlord.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_landlord/top_landlord.html
@@ -27,36 +27,42 @@
 <body class="gray-bg">
 <div class="container-div">
     <div class="row">
-        <!--            <div class="col-sm-12 search-collapse">-->
-        <!--                <form id="formId">-->
-        <!--                    <div class="select-list">-->
-        <!--                        <ul>-->
-        <!--                            <li>-->
-        <!--                                <label>特产名称：</label>-->
-        <!--                                <input type="text" name="specialtyName"/>-->
-        <!--                            </li>-->
-        <!--                            <li>-->
-        <!--                                <label>特产价格：</label>-->
-        <!--                                <input type="text" name="price"/>-->
-        <!--                            </li>-->
-        <!--                            <li>-->
-        <!--                                <label>特产销量：</label>-->
-        <!--                                <input type="text" name="sale"/>-->
-        <!--                            </li>-->
-        <!--                        </ul>-->
-        <!--                    </div>-->
-        <!--                </form>-->
-        <!--            </div>-->
+        <div class="col-sm-12 search-collapse">
+            <form id="formId">
+                <div class="select-list">
+                    <ul>
+                        <li>
+                            <label>民宿名称：</label>
+                            <input type="text" name="houseName" id="house_name"/>
+                        </li>
+                        <li>
+                            <label>民宿地址：</label>
+                            <input type="text" name="address" id="address"/>
+                        </li>
+                        <li>
+                            <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                            <a class="btn btn-warning btn-rounded btn-sm" onclick="resetPre()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
+                    </li>
+                    </ul>
+                </div>
+            </form>
+        </div>
 
         <div class="btn-group-sm" id="toolbar" role="group">
-            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="yk:top_landlord:export">
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:top_landlord:export">
                 <i class="fa fa-download"></i> 导出
             </a>
-            <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="system:top_landlord:print">
+            <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="yk:top_landlord:print">
                 <i class="fa fa-plus"></i> 打印
             </a>
             <a class="btn btn-success" onclick="$.modal.openTab('民宿统计', '/yk/top_landlord/statistics');" shiro:hasPermission="yk:top_landlord:statistics">
                 <i class="fa fa-plus"></i> 统计
+            </a>
+            <a class="btn btn-success" onclick="$.table.refreshOptions({sortName: 'sale'})">
+                <i class="fa fa-plus"></i> 按销量排序
+            </a>
+            <a class="btn btn-success" onclick="$.table.refreshOptions({sortName: 'score'})">
+                <i class="fa fa-plus"></i> 按得分排序
             </a>
         </div>
 
@@ -77,6 +83,7 @@
             modalName: "最热民宿榜单",
             sortName: "sale",
             sortOrder: "desc",
+            pagination: false,
             columns:
                 [{
                     field: 'id',
@@ -98,11 +105,9 @@
                 }, {
                     field: 'sale',
                     title: '民宿销量',
-                    sortable: true,
                 },{
                     field: 'score',
-                    title: '民宿得分',
-                    sortable: true,
+                    title: '民宿得分'
                 }, {
                     title: '操作',
                     field: 'caozuo',
@@ -117,6 +122,12 @@
         };
         $.table.init(options);
     });
+
+    function resetPre() {
+        $("#address").val("");
+        $("#house_name").val("");
+        $.table.search();
+    }
 
     function detailClicked(id) {
         var url= prefix + "/detail/" + id;
