--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
@@ -196,7 +196,7 @@
                 },
                 {
                     field: 'isReceived',
-                    title: '是否收获',
+                    title: '是否收货',
                     formatter: function(value, row, index) {
                         return $.table.selectDictLabel(isReceivedDatas, value);
                     }
