--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/add.html
@@ -35,7 +35,7 @@
                 <label class="col-sm-3 control-label">下单时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
-                        <input name="buyTime" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <input name="buyTime" class="form-control" placeholder="yyyy-MM-dd" type="text" required>
                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </div>
