--- a/ruoyi-admin/src/main/resources/static/css/login.css
+++ b/ruoyi-admin/src/main/resources/static/css/login.css
@@ -72,14 +72,20 @@ body.signin {
 	padding:30px
 }
 .dynamic-background{
-	position: fixed;
+	position: absolute;
 	top:0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: -10;
-	object-fit: cover;
+	object-fit: fill;
 }
+.pchelement{
+	visibility: hidden; //元素默认是隐藏的
+}
+.father:hover .pchelement{
+	  visibility:visible ;
+  }
 /*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 
 
