--- a/ruoyi-admin/src/main/resources/templates/system/landlord/landlord.html
+++ b/ruoyi-admin/src/main/resources/templates/system/landlord/landlord.html
@@ -38,10 +38,6 @@
                             <label>民宿地址：</label>
                             <input type="text" name="address"/>
                         </li>
-                        <!--                        <li>-->
-                        <!--                            <label>民宿评分：</label>-->
-                        <!--                            <input type="text" name="score"/>-->
-                        <!--                        </li>-->
                         <li>
                             <a class="btn btn-primary btn-rounded btn-sm noprint" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
                             <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
@@ -114,6 +110,16 @@
                 {
                     field: 'address',
                     title: '民宿地址',
+                    sortable: 'true'
+                },
+                {
+                    field: 'province',
+                    title: '省份',
+                    sortable: 'true'
+                },
+                {
+                    field: 'city',
+                    title: '城市',
                     sortable: 'true'
                 },
                 {
