驾驶舱两个表

--- a/ruoyi-admin/src/main/resources/templates/main.html
+++ b/ruoyi-admin/src/main/resources/templates/main.html
@@ -49,11 +49,8 @@
 
 </head>
 
-<body class="gray-bg">
-
-<div class="landscape">
-
-</div>
+<body class="gray-bg" style="overflow: hidden">
+<div class="landscape"></div>
 
 <div class="filter">
 	<div id="benti" class="row border-bottom  dashboard-header">
@@ -531,9 +528,7 @@
 	</div>
 </div>
 
-<canvas id="canvas">
-
-</canvas>
+<canvas id="canvas"></canvas>
 
 
 <!--<body id="bdpg" background="https://localhost/profile/Fall.mp4" style="background-repeat:no-repeat;background-attachment:fixed; background-size:100% 100%;">-->
