--- a/ruoyi-admin/src/main/resources/static/assets/global/css/dynamic1.css
+++ b/ruoyi-admin/src/main/resources/static/assets/global/css/dynamic1.css
@@ -1,12 +1,13 @@
 html,
 body {
   margin: 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
   width: 100%;
   height: 100%;
   /*cursor: none;*/
   background: black;
   background: linear-gradient(to bottom, #000000 0%, #5788fe 100%);
+  background-attachment: scroll;
 }
 .filter {
   width: 100%;
@@ -39,4 +40,5 @@ body {
   background-size: 1000px 250px;
   background-repeat: repeat-x;
   background-position: center bottom;
+  background-attachment: scroll;
 }
