--- a/ruoyi-admin/src/main/resources/templates/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -41,23 +42,13 @@
 
 
         },4300);
-
-
-
-
-
-
-
-
     })
 </script>
+<body>
 <div class="loading">
     <div class="loadbox"> <img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/loading.gif"> 页面加载中... </div>
 </div>
-<div class="head">
-    <h1><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/logo.png">生意参谋大数据可视化HTML模板</h1>
-    <div class="weather"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/weather.png"><span>多云转小雨</span><span>2017-12-30</span></div>
-</div>
+
 <div class="mainbox">
     <ul class="clearfix">
         <li>
@@ -93,6 +84,13 @@
                 <div id="echarts4" style="height: 2.2rem; width: 100%;"></div>
                 <div class="boxfoot"></div>
             </div>
+            <div class="boxall" style="height: 2.65rem" hidden>
+                <div class="alltitle">消费占比</div>
+                <div class="sy" id="echarts4"></div>
+                <div class="sy" id="echarts5"></div>
+                <div class="sy" id="echarts6"></div>
+                <div class="boxfoot"></div>
+            </div>
             <div class="boxall" style="height: 2.65rem"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
                 <div class="alltitle">订单种类比例</div>
                 <div class="sy" id="pch1"></div>
@@ -100,64 +98,6 @@
                 <div class="sy" id="pch3"></div>
                 <div class="boxfoot"></div>
             </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
-            <div class="boxall" style="height: 2.65rem">
-                <div class="alltitle">消费占比</div>
-                <div class="sy" id="echarts7"></div>
-                <div class="sy" id="echarts8"></div>
-                <div class="sy" id="echarts9"></div>
-                <div class="boxfoot"></div>
-            </div>
-        </li>
-        <li>
-            <div class="bar">
-                <div class="barbox">
-                    <ul class="clearfix">
-                        <li class="pulll_left counter">12581189</li>
-                        <li class="pulll_left counter">3912410</li>
-                    </ul>
-                </div>
-                <div class="barbox2">
-                    <ul class="clearfix">
-                        <li class="pulll_left">消费总金额</li>
-                        <li class="pulll_left">消费总笔数</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="map">
-                <div class="map1"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/lbx.png"></div>
-                <div class="map2"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/jt.png"></div>
-                <div class="map3"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/map.png"></div>
-                <div class="map4" id="map_1"></div>
-            </div>
-        </li>
-        <li>
-            <div class="boxall" style="height:5.2rem">
-                <div class="alltitle">新增会员信息</div>
-                <div class="tabs">
-                    <ul class="clearfix">
-                        <li><a class="active" href="#">7天</a></li>
-                        <li><a href="#">15天</a></li>
-                        <li><a href="#">30天</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix">
-                    <div class="sy" id="echarts6"></div>
-                    <div class="sy" id="echarts7"></div>
-                    <div class="sy" id="echarts8"></div>
-                </div>
-                <div class="addnew">
-                    <div class="tit02"><span>今日新增会员列表</span></div>
-                    <div class="adduser">
-                        <ul class="clearfix">
-                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">1今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
-                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">2今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
-                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">3今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
-                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">4今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="boxfoot"></div>
-            </div>
             <div class="boxall" style="height: 3.4rem">
                 <div class="alltitle">实时消费记录</div>
                 <div class="wrap">
@@ -184,38 +124,30 @@
                 </div>
                 <div class="boxfoot"></div>
             </div>
-            <div class="boxall" style="height:260px;">
-                <div class="alltitle">标题样式</div>
-                <div class="navboxall">
-                    <div class="wraptit">
-                        <span>单号</span><span>金额</span><span>品名</span><span>时间</span>
-                    </div>
-                    <div class="wrap">
-                        <ul>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
-                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+        </li>
 
-                        </ul>
-                    </div>
 
+        <li>
+            <div class="bar">
+                <div class="barbox">
+                    <ul class="clearfix">
+                        <li class="pulll_left counter">12581189</li>
+                        <li class="pulll_left counter">3912410</li>
+                    </ul>
+                </div>
+                <div class="barbox2">
+                    <ul class="clearfix">
+                        <li class="pulll_left">消费总金额</li>
+                        <li class="pulll_left">消费总笔数</li>
+                    </ul>
                 </div>
             </div>
-            <div class="boxall" style="height:300px"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
-                <div class="alltitle">民宿订单统计</div>
-                <div class="navboxall">
-                    <table class="table1" width="100%" border="0" cellspacing="0" cellpadding="0">
-                        <tbody id="pch-rank">
-                        </tbody>
-                    </table>
-                </div>
-            </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
+            <div class="map">
+                <div class="map1"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/lbx.png"></div>
+                <div class="map2"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/jt.png"></div>
+                <div class="map3"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/map.png"></div>
+                <div class="map4" id="map_1"></div>
+            </div>
 
             <div class="boxall" style="height: 300px">
                 <div class="alltitle">标题样式</div>
@@ -263,8 +195,129 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
+
+
+
+        </li>
+        <li>
+            <div class="boxall" style="height:5.2rem">
+                <div class="alltitle">新增会员信息</div>
+                <div class="tabs">
+                    <ul class="clearfix">
+                        <li><a class="active" href="#">7天</a></li>
+                        <li><a href="#">15天</a></li>
+                        <li><a href="#">30天</a></li>
+                    </ul>
+                </div>
+                <div class="clearfix">
+                    <div class="sy" id="echarts6"></div>
+                    <div class="sy" id="echarts7"></div>
+                    <div class="sy" id="echarts8"></div>
+                </div>
+                <div class="addnew">
+                    <div class="tit02"><span>今日新增会员列表</span></div>
+                    <div class="adduser">
+                        <ul class="clearfix">
+                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">1今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
+                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">2今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
+                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">3今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
+                            <li class="clearfix"> <span class="pulll_left"><img src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/images/head.jpg">4今日新增会员列表</span> <span class="pulll_right">24岁 - 女 - 广州 </span> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="boxfoot"></div>
+            </div>
+
+            <div class="boxall" style="height:260px;">
+                <div class="alltitle">标题样式</div>
+                <div class="navboxall">
+                    <div class="wraptit">
+                        <span>单号</span><span>金额</span><span>品名</span><span>时间</span>
+                    </div>
+                    <div class="wrap">
+                        <ul>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+                            <li><p><span>100021415</span><span>199</span><span>手机</span><span>18小时</span></p></li>
+
+                        </ul>
+                    </div>
+
+                </div>
+
+
+                <div class="boxall" style="height: 300px" hidden>
+                    <div class="alltitle">标题样式</div>
+                    <div class="navboxall">
+                        <table class="table1" width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tbody>
+                            <tr>
+                                <th scope="col">排名</th>
+                                <th scope="col">公司</th>
+                                <th scope="col">数量</th>
+                                <th scope="col">增长率</th>
+                            </tr>
+                            <tr>
+                                <td><span>1</span></td>
+                                <td>腾讯科技</td>
+                                <td>114万<br></td>
+                                <td>100%<br></td>
+                            </tr>
+                            <tr>
+                                <td><span>2</span></td>
+                                <td>百度公司</td>
+                                <td>923823万</td>
+                                <td>21%</td>
+                            </tr>
+
+                            <tr>
+                                <td><span>3</span></td>
+                                <td>新浪</td>
+                                <td>1240253万</td>
+                                <td>12%</td>
+                            </tr>
+                            <tr>
+                                <td><span>4</span></td>
+                                <td>网易</td>
+                                <td>1.2亿</td>
+                                <td>39%</td>
+                            </tr>
+                            <tr>
+                                <td><span>5</span></td>
+                                <td>雅虎</td>
+                                <td>13423万</td>
+                                <td>9%</td>
+                            </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                <div class="boxall" style="height:300px"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&pch!-->
+                    <div class="alltitle">民宿订单统计</div>
+                    <div class="navboxall">
+                        <table class="table1" width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tbody id="pch-rank">
+                            </tbody>
+                        </table>
+                    </div>
+                </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&pch!-->
+
+                <div class="boxall" style="height: 2.65rem">
+                    <div class="alltitle">消费占比</div>
+                    <div class="sy" id="echarts1"></div>
+                    <div class="sy" id="echarts2"></div>
+                    <div class="sy" id="echarts3"></div>
+                    <div class="boxfoot"></div>
+                </div>
         </li>
 
     </ul>
@@ -742,6 +795,11 @@
         myChart.resize();
     });
 </script>
+<script type="text/javascript" src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/js/jquery.waypoints.min.js"></script>
+<script type="text/javascript" src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/js/jquery.countup.min.js"></script>
+<script type="text/javascript">
+    $('.counter').countUp();
+</script>
 <script type="text/javascript" id="pch-script">
 
 
@@ -949,11 +1007,6 @@
     }, 500);
 
 
-</script>
-<script type="text/javascript" src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/js/jquery.waypoints.min.js"></script>
-<script type="text/javascript" src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/js/jquery.countup.min.js"></script>
-<script type="text/javascript">
-    $('.counter').countUp();
 </script>
 
 </body>
