--- a/ruoyi-admin/src/main/resources/templates/data/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data/data.html
@@ -84,13 +84,20 @@
                 <div id="echarts4" style="height: 2.2rem; width: 100%;"></div>
                 <div class="boxfoot"></div>
             </div>
-            <div class="boxall" style="height: 2.65rem">
+            <div class="boxall" style="height: 2.65rem" hidden>
                 <div class="alltitle">消费占比</div>
                 <div class="sy" id="echarts4"></div>
                 <div class="sy" id="echarts5"></div>
                 <div class="sy" id="echarts6"></div>
                 <div class="boxfoot"></div>
             </div>
+            <div class="boxall" style="height: 2.65rem"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
+                <div class="alltitle">订单种类比例</div>
+                <div class="sy" id="pch1"></div>
+                <div class="sy" id="pch2"></div>
+                <div class="sy" id="pch3"></div>
+                <div class="boxfoot"></div>
+            </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
             <div class="boxall" style="height: 3.4rem">
                 <div class="alltitle">实时消费记录</div>
                 <div class="wrap">
@@ -246,7 +253,7 @@
                 </div>
 
 
-            <div class="boxall" style="height: 300px">
+                <div class="boxall" style="height: 300px" hidden>
                 <div class="alltitle">标题样式</div>
                 <div class="navboxall">
                     <table class="table1" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -294,6 +301,15 @@
                 </div>
 
             </div>
+                <div class="boxall" style="height:300px"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&pch!-->
+                    <div class="alltitle">民宿订单统计</div>
+                    <div class="navboxall">
+                        <table class="table1" width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tbody id="pch-rank">
+                            </tbody>
+                        </table>
+                    </div>
+                </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&pch!-->
 
                 <div class="boxall" style="height: 2.65rem">
                     <div class="alltitle">消费占比</div>
@@ -302,6 +318,7 @@
                     <div class="sy" id="echarts3"></div>
                     <div class="boxfoot"></div>
                 </div>
+            </div>
         </li>
 
     </ul>
@@ -783,6 +800,214 @@
 <script type="text/javascript" src="http://www.weikebaijia.net/upload/moban/dsj/%E7%94%9F%E6%84%8F%E5%8F%82%E8%B0%8B%E9%94%80%E5%94%AE%E5%A4%A7%E6%95%B0%E6%8D%AE%E9%A1%B5%E9%9D%A2%E6%A8%A1%E6%9D%BF/js/jquery.countup.min.js"></script>
 <script type="text/javascript">
     $('.counter').countUp();
+</script>
+<script type="text/javascript" id="pch-script">
+
+
+    $(document).ready(function () {
+        pchChart1.resize();
+        pchChart2.resize();
+        pchChart3.resize();
+    });
+    window.addEventListener("resize", function () {
+        pchChart1.resize();
+        pchChart2.resize();
+        pchChart3.resize();
+    });
+
+    var house;
+    var specialty;
+    $.ajax({
+        type: 'post',
+        url: 'http://localhost/system/room/dataPage',
+        async: false,
+        success: function(res) {
+            console.log(res);
+            let json = eval( "(" + res + ")" );
+            house=json.house;
+            specialty=json.specialty;
+
+            var str="<tr>\n" +
+                "                            <th scope=\"col\" style='font-size: medium;color: whitesmoke'>排名</th>\n" +
+                "                            <th scope=\"col\" style='font-size: medium;color: whitesmoke'>民宿名称</th>\n" +
+                "                            <th scope=\"col\" style='font-size: medium;color: whitesmoke'>注册人</th>\n" +
+                "                            <th scope=\"col\" style='font-size: medium;color: whitesmoke'>订单数量</th>\n";
+            for(var i=json.table.length-1;i>-1;i--){
+                str=str+"                        <tr>\n" +
+                    "                            <td style='font-size: medium;'><span style='color: whitesmoke'>"+(json.table.length-i)+"</span></td>\n" +
+                    "                            <td style='font-size: medium;color: whitesmoke'>"+json.table[i].name+"</td>\n" +
+                    "                            <td style='font-size: medium;color: whitesmoke'>"+json.table[i].owner+"<br></td>\n" +
+                    "                            <td style='font-size: medium;color: whitesmoke'>"+json.table[i].value+"<br></td>\n" +
+                    "                        </tr>\n";
+            }
+
+            document.getElementById("pch-rank").innerHTML=str;
+        }
+    });
+    var totle = house + specialty;
+    var pchChart1 = echarts.init(document.getElementById('pch1'));
+    pchOption1 = {
+        title:{
+            text:"订单总数",
+            show:true,
+            left:'center',
+            top:150,
+            textStyle:{
+                color:'white',
+            }
+        },
+        series: [{
+            type: 'pie',
+            radius: ['70%', '80%'],
+            color: '#0088cc',
+            label: {
+                normal: {
+                    position: 'center'
+                }
+            },
+            data: [{
+                value: v1,
+                name: "订单总数",
+                label: {
+                    normal: {
+                        formatter: totle + '',
+                        textStyle: {
+                            fontSize: 20,
+                            color: '#fff',
+                        }
+                    }
+                }
+            },
+            ]
+        }]
+    };
+
+
+    var pchChart2 = echarts.init(document.getElementById('pch2'));
+    pchOption2 = {
+        title:{
+            text:"房间预定",
+            show:true,
+            left:'center',
+            top:150,
+            textStyle:{
+                color:'white',
+            }
+        },
+        series: [{
+            type: 'pie',
+            radius: ['70%', '80%'],
+            color: '#fccb00',
+            label: {
+                normal: {
+                    position: 'center'
+                }
+            },
+            data: [{
+                value: house,
+                name: '房间预定',
+                label: {
+                    normal: {
+                        formatter: house + '',
+                        textStyle: {
+                            fontSize: 20,
+                            color: '#fff',
+                        }
+                    }
+                }
+            }, {
+                value: specialty,
+                name: '特产购买',
+                label: {
+                    normal: {
+                        formatter: function (params) {
+                            return '占比' + Math.round(house / totle * 100) + '%'
+                        },
+                        textStyle: {
+                            color: '#aaa',
+                            fontSize: 12
+                        }
+                    }
+                },
+                itemStyle: {
+                    normal: {
+                        color: 'rgba(255,255,255,.2)'
+                    },
+                    emphasis: {
+                        color: '#fff'
+                    }
+                },
+            }]
+        }]
+    };
+
+
+    var pchChart3 = echarts.init(document.getElementById('pch3'));
+    pchOption3 = {
+        title:{
+            text:"特产购买",
+            show:true,
+            left:'center',
+            top:150,
+            textStyle:{
+                color:'white',
+            }
+        },
+        series: [{
+            type: 'pie',
+            radius: ['70%', '80%'],
+            color: '#62b62f',
+            label: {
+                normal: {
+                    position: 'center'
+                }
+            },
+            data: [{
+                value: specialty,
+                name: '特产购买',
+                label: {
+                    normal: {
+                        formatter: specialty + '',
+                        textStyle: {
+                            fontSize: 20,
+                            color: '#fff',
+                        }
+                    }
+                }
+            }, {
+                value: house,
+                name: '房间预订',
+                label: {
+                    normal: {
+                        formatter: function (params) {
+                            return '占比' + Math.round(specialty / totle * 100) + '%'
+                        },
+                        textStyle: {
+                            color: '#aaa',
+                            fontSize: 12
+                        }
+                    }
+                },
+                itemStyle: {
+                    normal: {
+                        color: 'rgba(255,255,255,.2)'
+                    },
+                    emphasis: {
+                        color: '#fff'
+                    }
+                },
+            }]
+        }]
+    };
+
+
+    setTimeout(function () {
+        pchChart1.setOption(pchOption1);
+        pchChart2.setOption(pchOption2);
+        pchChart3.setOption(pchOption3);
+    }, 500);
+
+
 </script>
 
 </body>
