--- a/ruoyi-admin/src/main/resources/templates/main.html
+++ b/ruoyi-admin/src/main/resources/templates/main.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--360浏览器优先以webkit内核解析-->
-	<title>第4组 民宿旅游平台</title>
+	<title>XM-05 民宿旅游平台</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 	<link href="../static/css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
@@ -14,7 +14,7 @@
 <body class="gray-bg">
 <div class="row border-bottom white-bg dashboard-header">
 	<div class="col-sm-5">
-		<h2>欢迎访问第4组 民宿旅游平台 (ᕑᗢᓫ∗)˒</h2>
+		<h2>欢迎访问XM-05 民宿旅游平台 (ᕑᗢᓫ∗)˒</h2>
 		<!--            <p>一直想做一款后台管理系统，看了很多优秀的开源项目但是发现没有合适自己的。<b>网站管理后台</b></p>-->
 	</div>
 </div>
