--- a/ruoyi-admin/src/main/resources/templates/register.html
+++ b/ruoyi-admin/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
         <div class="col-sm-7">
             <div class="signin-info">
                 <div class="logopanel m-b">
-                    <h1><img alt="[ 若依 ]" src="../static/ruoyi.png" th:src="@{/ruoyi.png}"></h1>
+<!--                    <h1><img alt="[ 若依 ]" src="../static/ruoyi.png" th:src="@{/ruoyi.png}"></h1>-->
                 </div>
                 <div class="m-b"></div>
                 <!--                    <h4>欢迎使用 <strong>若依 后台管理系统</strong></h4>-->
@@ -34,7 +34,7 @@
                 <!--                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li>-->
                 <!--                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li>-->
                 <!--                    </ul>-->
-                <strong>已经注册过? <a th:href="@{/login}">直接登录&raquo;</a></strong>
+<!--                <strong>已经注册过? <a th:href="@{/login}">直接登录&raquo;</a></strong>-->
             </div>
         </div>
         <div class="col-sm-5">
@@ -44,28 +44,34 @@
                 <input type="text"     name="username" class="form-control uname"         placeholder="用户名"   maxlength="20" />
                 <input type="password" name="password" class="form-control pword"         placeholder="密码"     maxlength="20" />
                 <input type="password" name="confirmPassword" class="form-control pword"  placeholder="确认密码" maxlength="20" />
-                <div class="row m-t" th:if="${captchaEnabled==true}">
-                    <div class="col-xs-6">
-                        <input type="text" name="validateCode" class="form-control code"  placeholder="验证码"   maxlength="5" >
-                    </div>
-                    <div class="col-xs-6">
-                        <a href="javascript:void(0);" title="点击更换验证码">
-                            <img th:src="@{/captcha/captchaImage(type=${captchaType})}" class="imgcode" width="85%"/>
-                        </a>
-                    </div>
+<!--                <div class="row m-t" th:if="${captchaEnabled==true}">-->
+<!--                    <div class="col-xs-6">-->
+<!--                        <input type="text" name="validateCode" class="form-control code"  placeholder="验证码"   maxlength="5" >-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-6">-->
+<!--                        <a href="javascript:void(0);" title="点击更换验证码">-->
+<!--                            <img th:src="@{/captcha/captchaImage(type=${captchaType})}" class="imgcode" width="85%"/>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <div class="checkbox-custom" th:classappend="${captchaEnabled==false} ? 'm-t'">
+                    <input type="checkbox" id="acceptTerm" name="acceptTerm"> <label for="acceptTerm">成为房东</label>
+<!--                    <a href="https://gitee.com/y_project/RuoYi/blob/master/README.md" target="_blank">使用条款</a>-->
                 </div>
                 <div class="checkbox-custom" th:classappend="${captchaEnabled==false} ? 'm-t'">
-                    <input type="checkbox" id="acceptTerm" name="acceptTerm"> <label for="acceptTerm">我已阅读并同意</label>
-                    <a href="https://gitee.com/y_project/RuoYi/blob/master/README.md" target="_blank">使用条款</a>
+                    <input type="checkbox" id="acceptTerm" name="acceptTerm"> <label for="acceptTerm">成为顾客</label>
+                    <!--                    <a href="https://gitee.com/y_project/RuoYi/blob/master/README.md" target="_blank">使用条款</a>-->
                 </div>
+                <br/>
+                <strong>已经注册过? <a th:href="@{/login}">直接登录&raquo;</a></strong>
                 <button class="btn btn-success btn-block" id="btnSubmit" data-loading="正在验证注册，请稍候...">注册</button>
             </form>
         </div>
     </div>
     <div class="signup-footer">
-        <div class="pull-left">
-            &copy; 2018-2022 All Rights Reserved. RuoYi <br>
-        </div>
+<!--        <div class="pull-left">-->
+<!--            &copy; 2018-2022 All Rights Reserved. RuoYi <br>-->
+<!--        </div>-->
     </div>
 </div>
 <script th:inline="javascript"> var ctx = [[@{/}]]; var captchaType = [[${captchaType}]]; </script>
